CS_PROD_20150209_01/Metadata/unpackaged/objects/Redlining_Request__c.object
<CustomObject>
    <description>Created by LM on 4/1/2014 for Phase2</description>
    <fields>
        <fullName>Addendum_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addendum Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Comments__c</fullName>
        <label>Business Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dates__c</fullName>
        <label>Dates</label>
        <picklist>
            <picklistValues>
                <fullName>Change Service Term/Effective Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change MSA/Addendum Date</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Finance_Comments__c</fullName>
        <label>Finance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_4_Fees_Payments__c</fullName>
        <label>General #4: Fees &amp; Payments</label>
        <picklist>
            <picklistValues>
                <fullName>(a) Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(b) Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(c) Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(d) Fees</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>General_5_Term_Susp_Termination__c</fullName>
        <label>General #5: Term; Susp; Termination</label>
        <picklist>
            <picklistValues>
                <fullName>(a)(i) Removal of Auto-Renewal Clause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(a)(ii) Addition of Out Clause</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>General_8_Limitation_on_Liability__c</fullName>
        <label>General #8: Limitation on Liability</label>
        <picklist>
            <picklistValues>
                <fullName>(e) Indemnification</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>General_9_Miscellaneous__c</fullName>
        <label>General #9: Miscellaneous</label>
        <picklist>
            <picklistValues>
                <fullName>(c) Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(i) Governing Law</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>International_Print_Eval_Terms_Comments__c</fullName>
        <label>International Print/Eval Terms Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>International_Print_Evaluation_Terms__c</fullName>
        <label>International Print/Evaluation Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Add Canadian Copyright T&amp;Cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add UK Copyright T&amp;Cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Evaluation Appendix</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Legal_Comments__c</fullName>
        <label>Legal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 4/2/2014 for Phase2</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Redlining Requests</relationshipLabel>
        <relationshipName>Redlining_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <label>Other Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_Clause_Type__c</fullName>
        <label>Out Clause Type</label>
        <picklist>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breach of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Redlining Request</label>
    <nameField>
        <displayFormat>RRN-{000000}</displayFormat>
        <label>Redlining Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redlining Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>